feature/backend/月ごとの集計用データ生成機能の実装
